--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -96,8 +96,14 @@ jobs:
       run: |
         echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
+        
+    - name: Copy img
+      working-directory: ./openwrt
+      run: |
         echo '显示当前文件' ;ls -al
-    
+        echo "当前路径 $pwd"
+        cp *.img.gz /
+
     -
       name: Login to DockerHub
       uses: docker/login-action@v1 
