--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -102,7 +102,7 @@ jobs:
       run: |
         echo '显示当前文件' ;ls -al
         echo "当前路径 $pwd"
-        cp *.img.gz /
+        cp *.tar.gz /
 
     -
       name: Login to DockerHub
