--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@master
+      
+    - name: Copy tar.gz
       run: |
         cp ./img/*.tar.gz .
 
